--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -202,7 +202,7 @@ limitations under the License.
       </iron-pages>
       <div class="horizontal end-justified flex layout">
         <paper-button raised><a href="/terms.html" target="_blank">Terms</a></paper-button>
-        <paper-button raised><a href="/privacy.html" target="_blank">Privacy Policy</a></paper-button>
+        <paper-button raised><a href="/privacy.html">Privacy Policy</a></paper-button>
         <paper-button raised dialog-dismiss autofocus>Close</paper-button>
       </div>
     </paper-dialog>
