--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="app.manifest">
+<html>
 
 <head>
 
@@ -20,7 +20,6 @@
   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   <!-- Polymer Imports -->
   <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="../bower_components/polymer/polymer.html">
   <!-- Fix for Viewport Units -->
   <script src="../bower_components/viewport-units-buggyfill/viewport-units-buggyfill.js"></script>
   <script src="../bower_components/viewport-units-buggyfill/viewport-units-buggyfill.hacks.js"></script>
@@ -30,13 +29,6 @@
   <!-- Firebase -->
   <script src="//cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
 
-  <!-- load icons as blocking operation -->
-  <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-  <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-  <link rel="import" href="../bower_components/iron-icons/av-icons.html">
-  <link rel="import" href="../bower_components/iron-iconset/iron-iconset.html">
-  <link rel="import" href="../bower_components/iron-iconset-svg/iron-iconset-svg.html">
-
   <!-- tinavg-webapp -->
   <link rel="import" href="elements/tinavg-webapp.html">
   
@@ -45,6 +37,5 @@
 <body fullbleed unresolved>
   <div id="friendly_message" hidden>If you see this message something is taking too long, please try reloading your browser. <a href="javascript:void(0)" onclick="hideFriendlyMessage();">Click here to hide this message</a></div>
   <tinavg-webapp id="tinavg_app"></tinavg-webapp>
-  <script src="assets/js/app.js"></script>
 </body>
 </html>
