--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -39,6 +39,8 @@ limitations under the License.
 <link rel="import" href="../../bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="../../bower_components/neon-animation/neon-animations.html">
 <link rel="import" href="../../bower_components/firebase-element/firebase-auth.html">
+<link rel="import" href="../../bower_components/platinum-sw/platinum-sw-cache.html">
+<link rel="import" href="../../bower_components/platinum-sw/platinum-sw-register.html">
 <!-- Custom Elements -->
 <link rel="import" href="tinavg-behavior.html">
 <link rel="import" href="tinavg-style.html">
@@ -213,6 +215,15 @@ limitations under the License.
         <paper-button raised dialog-dismiss autofocus>Close</paper-button>
       </div>
     </paper-dialog>
+    <!-- Service Workers -->
+    <platinum-sw-register id="psw"
+                          auto-register
+                          clients-claim
+                          skip-waiting>
+      <platinum-sw-cache default-cache-strategy="networkFirst"
+                         precache-file="../precache.json">
+      </platinum-sw-cache>
+    </platinum-sw-register>
   </template>
 </dom-module>
 <script>
@@ -277,7 +288,9 @@ limitations under the License.
       'stripdia-set': 'setWBoardDisplay',
       'ready-set-go': 'lettersSet',
       'checking-word': 'fbLetterSeq',
-      'word-percent-correct': 'wordPercentCorrect'
+      'word-percent-correct': 'wordPercentCorrect',
+      'service-worker-installed': 'confirmSWInstall',
+      'service-worker-error': 'swError'
     },
     observers: [
 
@@ -585,6 +598,12 @@ limitations under the License.
     wordPercentCorrect: function(ev) {
       this.progress1 = ev.detail.progress;
       this.progress2 = ev.detail.secondary;
+    },
+    confirmSWInstall: function() {
+      console.log("SW Install Complete");
+    },
+    swError: function(err) {
+      console.log(err);
     }
   });
 function _getFirebaseName(authData) {
