--- a/app/services/letter-service.html
+++ b/app/services/letter-service.html
@@ -38,11 +38,13 @@
       'game-lang-changed': 'changeJsonUrl'
     },
     attached: function() {
-      this.jsonUrl = this.createJsonUrl(this.gameLang);
+      var gl = this.gameLang;
+      if(gl) this.jsonUrl = this.createJsonUrl(gl);
     },
-    changeJsonUrl: function(ev) {
-      this.jsonUrl = this.createJsonUrl(this.gameLang);
-      if(this.letterListBox && this.letterListBox.allLettersList[this.gameLang]) {
+    changeJsonUrl: function() {
+      var gl = this.gameLang;
+      this.jsonUrl = this.createJsonUrl(gl);
+      if(this.letterListBox && this.letterListBox.allLettersList[gl]) {
         this.letterListBox.setLetters = false;
         this.async(function() { this.spoofLoad(); }, 150);
       } else {
