minor changes to chrome packaged app

--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -87,7 +87,7 @@ limitations under the License.
       </div>
       
       <!-- Main Content Area -->
-      <paper-header-panel id="header-panel" main>
+      <paper-header-panel id="header-panel" class="vertical layout" main>
         <div class="two-headers paper-header">
           <div class="footer horizontal justified layout center">
             <div class="footer-button horizontal start-justified layout flex">
