--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
   <script src="//cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
 
   <!-- tinavg-webapp -->
+  <link rel="import" href="tinavg-style.html">
   <link rel="import" href="elements/tinavg-webapp.html">
   
 </head>
