--- a/app/elements/word-board.html
+++ b/app/elements/word-board.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../services/word-service.html">
 <link rel="import" href="tinavg-behavior.html">
-<script src="../assets/js/hangul.min.js"></script>
+<script src="../../node_modules/hangul-js/hangul.min.js"></script>
 
 
 <dom-module id="word-board">
