--- a/app/elements/jumbotron-text.html
+++ b/app/elements/jumbotron-text.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
-<script src="../assets/js/hangul.min.js"></script>
+<script src="../../node_modules/hangul-js/hangul.min.js"></script>
 
 
 
