--- a/app/elements/letter-list.html
+++ b/app/elements/letter-list.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../services/letter-service.html">
 <link rel="import" href="letter-card.html">
 <link rel="import" href="tinavg-behavior.html">
-<script src="../assets/js/hangul.min.js"></script>
+<script src="../../node_modules/hangul-js/hangul.min.js"></script>
 
 
 <dom-module id="letter-list">
